# HpcProject

./: .gitignore  CMakeLists.txt  main.cpp
files/: file1.txt
parallel/: Parallel.cpp  Parallel.h
readers/: DirReader.cpp  DirReader.h  FileReader.cpp  FileReader.h
sequence/: Sequence.cpp  Sequence.h
